--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,19 @@
     font-size: 24px;
     width: 200px;
 }
+
+.error {
+    position: absolute;
+    bottom: -0;
+    left: 19px;
+    font-size: 12px;
+    color: tomato;
+    opacity: 0;
+    transition: bottom .2s, left .2s, opacity .2s;
+    z-index: -1;
+}
+.error--active {
+    bottom: -19px;
+    left: 19px;
+    opacity: 1;
+}
